tests/sender/iface.out

--HEADERS--
Fatal error: Uncaught TypeError: Argument 1 passed to SapiResponseSender::send() must be an instance of SapiResponse, instance of MySapiResponse given, called in /Users/pmjones/Code/pmjones/php-request/tests/sender/iface.php on line 11 and defined in /Users/pmjones/Code/pmjones/php-request/src/SapiResponseSender.php:6
Stack trace:
#0 /Users/pmjones/Code/pmjones/php-request/tests/sender/iface.php(11): SapiResponseSender->send(Object(MySapiResponse))
#1 {main}
  thrown in /Users/pmjones/Code/pmjones/php-request/src/SapiResponseSender.php on line 6